--- a/meme-generator/src/styles/Meme.css
+++ b/meme-generator/src/styles/Meme.css
@@ -32,3 +32,15 @@
   justify-content: space-between;
   align-items: center;
 }
+.img-container{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  .meme-image{
+  margin-top: 10px;
+  max-width: 100%;
+  max-height: 375px;
+ 
+}
