--- a/meme-generator/src/styles/Meme.css
+++ b/meme-generator/src/styles/Meme.css
@@ -33,14 +33,57 @@
   align-items: center;
 }
 .img-container{
-
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
   .meme-image{
-  margin-top: 10px;
-  max-width: 100%;
+    margin-top: 10px;
+    max-width: 100%;
   max-height: 375px;
- 
+  
 }
+.meme--text {
+  /* background-color: rgba(0, 0, 0, 0.397); */
+  text-align: center;
+  position:absolute;
+  width: 450px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: sans-serif;
+  font-size: 3em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
+}
+
+ .bottom {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 5;
+}
+
+.top {
+  margin-top: 15px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+
+} 
